--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-14 Thu 14:39]
+#+CAPTION: Clock summary at [2019-02-14 Thu 15:32]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *179:31* |        |        | 100.0 |
+| *Total time*                                         | *180:23* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 179:31   |        |        | 100.0 |
-| Active                                               |          | 179:31 |        | 100.0 |
+| Stories                                              | 180:23   |        |        | 100.0 |
+| Active                                               |          | 180:23 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.1 |
 | Sprint and product backlog grooming                  |          |        |   4:43 |   2.6 |
-| Work on MASD theory                                  |          |        | 113:38 |  63.3 |
+| Work on MASD theory                                  |          |        | 113:38 |  63.0 |
 | Rename models to fit MASD architecture               |          |        |   4:56 |   2.7 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.6 |
 | Create the =orchestration= model                     |          |        |   4:15 |   2.4 |
-| Update vcpkg across all operative systems            |          |        |   4:35 |   2.6 |
+| Update vcpkg across all operative systems            |          |        |   4:35 |   2.5 |
 | Update C# reference models to latest dogen           |          |        |   0:42 |   0.4 |
-| Convert the utility model into a regular dogen model |          |        |   7:27 |   4.2 |
+| Convert the utility model into a regular dogen model |          |        |   7:27 |   4.1 |
 | Improve support for clang-cl builds                  |          |        |   2:02 |   1.1 |
 | Great meta-data rename                               |          |        |   4:54 |   2.7 |
-| Create a single binary for all of dogen              |          |        |  16:27 |   9.2 |
+| Create a single binary for all of dogen              |          |        |  16:27 |   9.1 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
-| Move generation properties into meta-data            |          |        |   5:08 |   2.9 |
+| Move generation properties into meta-data            |          |        |   6:00 |   3.3 |
 | Fix clang-cl warnings                                |          |        |   0:31 |   0.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -677,6 +677,7 @@ Problems:
 
 *** STARTED Move generation properties into meta-data                 :story:
     :LOGBOOK:
+    CLOCK: [2019-02-14 Thu 14:40]--[2019-02-14 Thu 15:32] =>  0:52
     CLOCK: [2019-02-14 Thu 14:01]--[2019-02-14 Thu 14:39] =>  0:38
     CLOCK: [2019-02-14 Thu 09:54]--[2019-02-14 Thu 11:46] =>  1:52
     CLOCK: [2019-02-13 Wed 17:53]--[2019-02-13 Wed 18:34] =>  0:41
@@ -692,7 +693,7 @@ interface.
 
 Notes:
 
-- rename "yarn." transforms in log to "masd."
+- rename "yarn." transforms in log to "masd." - done.
 
 *** STARTED Fix clang-cl warnings                                     :story:
     :LOGBOOK:
