--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-18 Mon 17:56]
+#+CAPTION: Clock summary at [2019-02-18 Mon 18:52]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *194:23* |        |        | 100.0 |
+| *Total time*                                              | *194:46* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 194:23   |        |        | 100.0 |
-| Active                                                    |          | 194:23 |        | 100.0 |
+| Stories                                                   | 194:46   |        |        | 100.0 |
+| Active                                                    |          | 194:46 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.1 |
 | Sprint and product backlog grooming                       |          |        |   5:02 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  58.5 |
+| Work on MASD theory                                       |          |        | 113:38 |  58.3 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.3 |
@@ -32,14 +32,15 @@
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
 | Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.8 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
-| Move generation properties into meta-data                 |          |        |   9:26 |   4.9 |
+| Move generation properties into meta-data                 |          |        |   9:26 |   4.8 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.5 |
 | Create a single binary for all of dogen                   |          |        |  19:02 |   9.8 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
-| Fix clang-cl warnings                                     |          |        |   4:46 |   2.5 |
-| Use tracing options in existing code                      |          |        |   0:42 |   0.4 |
+| Fix clang-cl warnings                                     |          |        |   4:46 |   2.4 |
+| Use tracing options in existing code                      |          |        |   0:44 |   0.4 |
 | References to types in top-level namespace do not resolve |          |        |   0:22 |   0.2 |
+| Model references are not transitive                       |          |        |   0:21 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -805,6 +806,7 @@ Notes:
 
 *** STARTED Use tracing options in existing code                      :story:
     :LOGBOOK:
+    CLOCK: [2019-02-18 Mon 18:50]--[2019-02-18 Mon 18:52] =>  0:02
     CLOCK: [2019-02-18 Mon 14:52]--[2019-02-18 Mon 15:04] =>  0:12
     CLOCK: [2019-02-15 Fri 17:14]--[2019-02-15 Fri 17:44] =>  0:30
     :END:
@@ -833,7 +835,10 @@ problem. Resolver is not walking up the path correctly.
 We also need to take into account the case where the name is used
 within a inner module.
 
-*** Model references are not transitive                               :story:
+*** STARTED Model references are not transitive                       :story:
+    :LOGBOOK:
+    CLOCK: [2019-02-18 Mon 18:29]--[2019-02-18 Mon 18:50] =>  0:21
+    :END:
 
 For some reason we do not seem to be following references of
 referenced models. We should load them automatically, now that they
@@ -847,6 +852,15 @@ really need to do is to combine the reference containers on merge. For
 this we need to create a method that loops through the map and inserts
 all keys which have not yet been inserted. Something like "merge
 references".
+
+We should address this issue when we introduce two-phase parsing of
+models. This is because, as with the new meta-model elements, we also
+need to do a first pass across the target and all reference models to
+obtain all the paths for all referenced models. We then need to obtain
+the unique set of referenced models and load those. To put in this
+logic in the code at present (i.e. without a two-phase approach) would
+mean we'd have to load the same models several times (or heavily
+rewrite existing code, resulting in a two-phase approach, anyway).
 
 *** Disable global hashing on coding                                  :story:
 
