--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,33 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-18 Mon 18:52]
+#+CAPTION: Clock summary at [2019-02-19 Tue 11:04]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *194:46* |        |        | 100.0 |
+| *Total time*                                              | *195:36* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 194:46   |        |        | 100.0 |
-| Active                                                    |          | 194:46 |        | 100.0 |
-| Edit release notes for previous sprint                    |          |        |   2:03 |   1.1 |
+| Stories                                                   | 195:36   |        |        | 100.0 |
+| Active                                                    |          | 195:36 |        | 100.0 |
+| Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:02 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  58.3 |
+| Work on MASD theory                                       |          |        | 113:38 |  58.1 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.3 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.2 |
-| Update vcpkg across all operative systems                 |          |        |   4:35 |   2.4 |
+| Update vcpkg across all operative systems                 |          |        |   4:35 |   2.3 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
 | Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.8 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
 | Move generation properties into meta-data                 |          |        |   9:26 |   4.8 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
+| References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.5 |
-| Create a single binary for all of dogen                   |          |        |  19:02 |   9.8 |
+| Create a single binary for all of dogen                   |          |        |  19:02 |   9.7 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
-| Fix clang-cl warnings                                     |          |        |   4:46 |   2.4 |
+| Fix clang-cl warnings                                     |          |        |   5:07 |   2.6 |
 | Use tracing options in existing code                      |          |        |   0:44 |   0.4 |
-| References to types in top-level namespace do not resolve |          |        |   0:22 |   0.2 |
 | Model references are not transitive                       |          |        |   0:21 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -625,6 +625,22 @@ types that require it, but it was not expressed. Interestingly,
 disabling an archetype globally and then enabling it locally does work
 (e.g. forward declarations).
 
+*** COMPLETED References to types in top-level namespace do not resolve :story:
+    CLOSED: [2019-02-19 Tue 10:58]
+    :LOGBOOK:
+    CLOCK: [2019-02-19 Tue 10:35]--[2019-02-19 Tue 11:04] =>  0:29
+    CLOCK: [2019-02-18 Mon 17:49]--[2019-02-18 Mon 17:56] =>  0:07
+    CLOCK: [2019-02-15 Fri 16:01]--[2019-02-15 Fri 16:16] =>  0:15
+    :END:
+
+When referring to =weaving_styles= defined in =masd::dogen= from
+within =masd::dogen::cli=, dogen failed to resolve the
+type. Qualifying it as =masd::dogen::weaving_styles= solved the
+problem. Resolver is not walking up the path correctly.
+
+We also need to take into account the case where the name is used
+within a inner module.
+
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -780,6 +796,7 @@ Problems:
 
 *** STARTED Fix clang-cl warnings                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-02-19 Tue 09:32]--[2019-02-19 Tue 09:53] =>  0:21
     CLOCK: [2019-02-18 Mon 14:52]--[2019-02-18 Mon 17:48] =>  2:56
     CLOCK: [2019-02-15 Fri 15:20]--[2019-02-15 Fri 16:01] =>  0:41
     CLOCK: [2019-02-15 Fri 14:21]--[2019-02-15 Fri 14:59] =>  0:38
@@ -802,7 +819,8 @@ Notes:
 - Updated issue on CDash parsing problems for clang-cl: [[https://github.com/Kitware/CDash/issues/733][Parsing of
   errors and warnings from clang-cl]]
 - Sent email to clang mailinglist: [[http://lists.llvm.org/pipermail/cfe-dev/2019-February/061326.html][Clang-cl - errors and warning
-  messages slightly different from MSVC]]
+  messages slightly different from MSVC]]. Clang [[http://lists.llvm.org/pipermail/cfe-dev/2019-February/061339.html][have patched]] the diffs
+  now.
 
 *** STARTED Use tracing options in existing code                      :story:
     :LOGBOOK:
@@ -820,20 +838,6 @@ Tasks:
 - update knitter to generate tracing options.
 - delete probing options from configuration.
 - delete probing options from tracer.
-
-*** STARTED References to types in top-level namespace do not resolve :story:
-    :LOGBOOK:
-    CLOCK: [2019-02-18 Mon 17:49]--[2019-02-18 Mon 17:56] =>  0:07
-    CLOCK: [2019-02-15 Fri 16:01]--[2019-02-15 Fri 16:16] =>  0:15
-    :END:
-
-When referring to =weaving_styles= defined in =masd::dogen= from
-within =masd::dogen::cli=, dogen failed to resolve the
-type. Qualifying it as =masd::dogen::weaving_styles= solved the
-problem. Resolver is not walking up the path correctly.
-
-We also need to take into account the case where the name is used
-within a inner module.
 
 *** STARTED Model references are not transitive                       :story:
     :LOGBOOK:
