--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-19 Tue 11:04]
+#+CAPTION: Clock summary at [2019-02-19 Tue 13:16]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *195:36* |        |        | 100.0 |
+| *Total time*                                              | *197:45* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 195:36   |        |        | 100.0 |
-| Active                                                    |          | 195:36 |        | 100.0 |
+| Stories                                                   | 197:45   |        |        | 100.0 |
+| Active                                                    |          | 197:45 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
-| Sprint and product backlog grooming                       |          |        |   5:02 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  58.1 |
+| Sprint and product backlog grooming                       |          |        |   5:13 |   2.6 |
+| Work on MASD theory                                       |          |        | 113:38 |  57.5 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.3 |
-| Create the =orchestration= model                          |          |        |   4:15 |   2.2 |
+| Create the =orchestration= model                          |          |        |   4:15 |   2.1 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.3 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
 | Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.8 |
@@ -36,10 +36,10 @@
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.5 |
-| Create a single binary for all of dogen                   |          |        |  19:02 |   9.7 |
+| Create a single binary for all of dogen                   |          |        |  20:47 |  10.5 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.6 |
-| Use tracing options in existing code                      |          |        |   0:44 |   0.4 |
+| Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
 | Model references are not transitive                       |          |        |   0:21 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -146,6 +146,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
      :LOGBOOK:
+     CLOCK: [2019-02-19 Tue 13:05]--[2019-02-19 Tue 13:16] =>  0:11
      CLOCK: [2019-02-15 Fri 17:45]--[2019-02-15 Fri 17:52] =>  0:07
      CLOCK: [2019-02-15 Fri 11:46]--[2019-02-15 Fri 11:55] =>  0:09
      CLOCK: [2019-02-15 Fri 09:50]--[2019-02-15 Fri 09:53] =>  0:03
@@ -867,6 +868,28 @@ the unique set of referenced models and load those. To put in this
 logic in the code at present (i.e. without a two-phase approach) would
 mean we'd have to load the same models several times (or heavily
 rewrite existing code, resulting in a two-phase approach, anyway).
+
+*** Handling of forward declarations on generated types               :story:
+
+At present, if we disable forward declarations globally (in a profile,
+say), the code fails to build with errors on visitors. This is because
+we need forward declarations for:
+
+- the visitable type;
+- all of its descendants;
+- the visitor.
+
+This is a hard requirement because, without these the code does not
+make sense. We need some way of "forcing" enablement for some features
+where there is such a hard dependency. This is probably something we
+need to look at when we implement "computable enablement". We then
+need some way of telling the system about these dependencies:
+e.g. visitor requires enablement x, y, z.
+
+A second problem is that, at present, there is no way to manually
+enable (force) forward declarations on visitors. We can enable them on
+all model elements but not on the generated type. Because of this we
+are generating forward declarations for all types, for no reason.
 
 *** Disable global hashing on coding                                  :story:
 
