--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-19 Tue 15:46]
+#+CAPTION: Clock summary at [2019-02-19 Tue 16:25]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *199:19* |        |        | 100.0 |
+| *Total time*                                              | *199:57* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 199:19   |        |        | 100.0 |
-| Active                                                    |          | 199:19 |        | 100.0 |
+| Stories                                                   | 199:57   |        |        | 100.0 |
+| Active                                                    |          | 199:57 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  57.0 |
+| Work on MASD theory                                       |          |        | 113:38 |  56.8 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.2 |
@@ -36,7 +36,7 @@
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.5 |
-| Create a single binary for all of dogen                   |          |        |  22:21 |  11.2 |
+| Create a single binary for all of dogen                   |          |        |  22:59 |  11.5 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.6 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -712,6 +712,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-19 Tue 15:47]--[2019-02-19 Tue 16:25] =>  0:38
     CLOCK: [2019-02-19 Tue 14:12]--[2019-02-19 Tue 15:46] =>  1:34
     CLOCK: [2019-02-19 Tue 11:19]--[2019-02-19 Tue 13:04] =>  1:45
     CLOCK: [2019-02-15 Fri 16:28]--[2019-02-15 Fri 17:13] =>  0:45
@@ -750,6 +751,14 @@ program options:
 - [[https://gist.github.com/randomphrase/10801888][cmdoptions.cpp]]: Demonstration of how to do subcommand option
   processing with boost program_options
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
+
+Notes:
+
+- create a top-level code generation transform that uses the API
+  options; internally it converts them to legacy options and calls the
+  coding workflow.
+- add methods to application to execute each activity. Then create a
+  boost visitor for each of the activities that calls each method.
 
 *Merged Stories*
 
