--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-20 Wed 10:56]
+#+CAPTION: Clock summary at [2019-02-20 Wed 11:12]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *201:07* |        |        | 100.0 |
+| *Total time*                                              | *201:22* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 201:07   |        |        | 100.0 |
-| Active                                                    |          | 201:07 |        | 100.0 |
+| Stories                                                   | 201:22   |        |        | 100.0 |
+| Active                                                    |          | 201:22 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  56.5 |
-| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
+| Work on MASD theory                                       |          |        | 113:38 |  56.4 |
+| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.2 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.1 |
@@ -35,9 +35,9 @@
 | Move generation properties into meta-data                 |          |        |   9:26 |   4.7 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
-| Create a colour palette test model                        |          |        |   0:54 |   0.4 |
+| Create a colour palette test model                        |          |        |   1:09 |   0.6 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.4 |
-| Create a single binary for all of dogen                   |          |        |  23:15 |  11.6 |
+| Create a single binary for all of dogen                   |          |        |  23:15 |  11.5 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.5 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -646,6 +646,7 @@ within a inner module.
 *** COMPLETED Create a colour palette test model                      :story:
     CLOSED: [2019-02-20 Wed 10:56]
     :LOGBOOK:
+    CLOCK: [2019-02-20 Wed 10:57]--[2019-02-20 Wed 11:12] =>  0:15
     CLOCK: [2019-02-20 Wed 10:02]--[2019-02-20 Wed 10:56] =>  0:54
     :END:
 
