--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-20 Wed 11:12]
+#+CAPTION: Clock summary at [2019-02-20 Wed 12:52]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *201:22* |        |        | 100.0 |
+| *Total time*                                              | *203:01* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 201:22   |        |        | 100.0 |
-| Active                                                    |          | 201:22 |        | 100.0 |
+| Stories                                                   | 203:01   |        |        | 100.0 |
+| Active                                                    |          | 203:01 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  56.4 |
+| Work on MASD theory                                       |          |        | 113:38 |  56.0 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.2 |
@@ -32,12 +32,12 @@
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.3 |
 | Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.7 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
-| Move generation properties into meta-data                 |          |        |   9:26 |   4.7 |
+| Move generation properties into meta-data                 |          |        |   9:26 |   4.6 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.6 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.4 |
-| Create a single binary for all of dogen                   |          |        |  23:15 |  11.5 |
+| Create a single binary for all of dogen                   |          |        |  24:54 |  12.3 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.5 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -731,6 +731,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-20 Wed 11:13]--[2019-02-20 Wed 12:52] =>  1:39
     CLOCK: [2019-02-20 Wed 09:45]--[2019-02-20 Wed 10:01] =>  0:31
     CLOCK: [2019-02-19 Tue 15:47]--[2019-02-19 Tue 16:25] =>  0:38
     CLOCK: [2019-02-19 Tue 14:12]--[2019-02-19 Tue 15:46] =>  1:34
@@ -779,6 +780,8 @@ Notes:
   coding workflow.
 - add methods to application to execute each activity. Then create a
   boost visitor for each of the activities that calls each method.
+- move the hand-crafted configuration defaults in program options
+  parser into configuration builder.
 
 *Merged Stories*
 
@@ -898,6 +901,24 @@ the unique set of referenced models and load those. To put in this
 logic in the code at present (i.e. without a two-phase approach) would
 mean we'd have to load the same models several times (or heavily
 rewrite existing code, resulting in a two-phase approach, anyway).
+
+*** Add stereotype for IoC containers                                 :story:
+
+At present we are marking IoC containers with either handcrafted or
+header only. In reality, they should have their own stereotype and
+colours as, in the future, we want to code generate them. However, we
+can only do this once we get rid of the initialisers because they are
+also a form of IoC containers, but with different requirements.
+
+Proposed stereotype: =masd::ioc::container=.
+
+Actually, this is not quite right. We are not creating the IoC
+containers themselves, but the wiring code that sets up these
+containers. We need to figure out the correct term for
+these. Suggestions:
+
+- [[https://github.com/avao/Qart/blob/master/Src/Qart.CyberTester/Bootstrapper.cs][bootstrapper]], with a =Bootstrapper.CreateContainer= method;
+  e.g. =masd::ioc::bootstrapper=.
 
 *** Handling of forward declarations on generated types               :story:
 
